[project]
name = "finn-made-uno"
version = "0.1.1"
description = "Little Uno Game to play when bored"
authors = [
    {name = "Finn English", email = "englf105@hsd.k12.or.us"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "finn_made_uno", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
